Fixing nav menu on smaller mobile devices.

--- a/style.css
+++ b/style.css
@@ -347,14 +347,17 @@ h3.technicalSkillsH {
 @media (max-width: 480px) {
     nav {
         font-size: 1rem;
+        gap: 0;
     }
 
     .subtitle {
-        font-size: 0.4rem;
+        font-size: 0.2rem;
+        width: 50%;
     }
 
     .main-title {
-        font-size: 1rem;
+        font-size: 0.5rem;
+        width: 50%;
     }
 
     .profile-pic-figure img {
